--- a/week2/assets/stylesheets/standard.css
+++ b/week2/assets/stylesheets/standard.css
@@ -1,4 +1,15 @@
-margin: 0;
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,
+b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {margin: 0; padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 .topnav {
@@ -21,4 +32,8 @@ margin: 0;
 .topnav a.active {
   background-color: red;
   color: white;
+}
+.topnav a.icon {
+  background-color: #ddd;
+  color: black;
 }
